--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -37,9 +37,6 @@ separator = "  "
 ; list fonts
 font-0 = "JetBrains Mono Nerd Font:style=Medium:size=10;2"
 font-1 = "FontAwesome:style=Regular:size=10;2"
-; font-0 = "Hack Nerd Font:style=Regular:size=10;2"
-; font-0 = "FontAwesome:style=Regular:size=10;2"
-
 
 modules-left = i3  
 modules-center = date
@@ -123,7 +120,7 @@ interval = 5
 
 format-volume = <ramp-volume> <label-volume>
 
-label-muted = muted
+label-muted = ﱝ muted
 label-muted-foreground = ${colors.disable} 
 
 ; Only applies if <ramp-volume> is used
@@ -183,7 +180,7 @@ format-disconnected = <label-disconnected>
 format-packetloss = <animation-packetloss> <label-connected>
 
 label-connected =   stanoira 
-label-disconnected = not connected
+label-disconnected = 睊 not connected
 label-disconnected-foreground = ${colors.disable}
 
 label-packetloss = %ifname%
