--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -148,6 +148,7 @@ label-indicator-background = ${colors.secondary}
 [module/powermenu]
 type = custom/text
 
+click-left = exec ~/.config/i3/scripts/powermenu
 content = ""
 content-padding = 0
 
