--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -38,7 +38,7 @@ separator = "  "
 font-0 = "JetBrains Mono Nerd Font:style=Medium:size=10;2"
 font-1 = "FontAwesome:style=Regular:size=10;2"
 
-modules-left = i3  
+modules-left = i3 
 modules-center = date
 modules-right = network networkspeedup networkspeeddown xkeyboard pulseaudio powermenu 
 
@@ -89,12 +89,12 @@ ws-icon-5 = 6;
 ws-icon-6 = 7;
 ws-icon-7 = 8;
 ws-icon-8 = 9;
-ws-icon-9 = 10;
+ws-icon-9 = 10; 
 ws-icon-default =
 
 [module/xwindow]
 type = internal/xwindow
-label = %title:0:30:...%
+label = %title:0:20:...%
 
 [module/date]
 type = internal/date
