--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -20,6 +20,7 @@ width = 100%
 height = 24
 offset-y = 0
 top = true
+fixed-center = true
 
 override-redirect = false
 padding-right = 2
@@ -28,6 +29,7 @@ scroll-up = next
 scroll-down = prev
 cursor-click = pointer
 enable-ipc = true
+line-size = 1
 
 background = ${colors.bg}
 foreground = ${colors.fg}
@@ -38,7 +40,7 @@ separator = "  "
 font-0 = "JetBrains Mono Nerd Font:style=Medium:size=10;2"
 font-1 = "FontAwesome:style=Regular:size=10;2"
 
-modules-left = i3 
+modules-left = i3 xwindow  
 modules-center = date
 modules-right = network networkspeedup networkspeeddown xkeyboard pulseaudio powermenu 
 
@@ -59,8 +61,9 @@ format = <label-state> <label-mode>
 
 
 label-focused = %icon%
-label-focused-foreground = ${colors.fg}
+label-focused-foreground = ${colors.magenta}
 label-focused-background = ${colors.bg-alt}
+label-focused-underline = ${colors.magenta}
 label-focused-padding = 2
 label-focused-font = 2
 
@@ -137,19 +140,21 @@ click-right = pavucontrol
 type = internal/xkeyboard
 blacklist-0 = num lock
 
-label-layout = %layout%
+label-layout =   %layout%
 label-layout-foreground = ${colors.primary}
 
 label-indicator-padding = 2
 label-indicator-margin = 2
-label-indicator-foreground = ${colors.background}
-label-indicator-background = ${colors.secondary}
+label-indicator-foreground = ${colors.bg}
+label-indicator-background = ${colors.magenta}
 
 [module/powermenu]
 type = custom/text
 
 click-left = exec ~/.config/i3/scripts/powermenu
 content = ""
+content-background = ${colors.background} 
+content-foreground = ${colors.foreground} 
 content-padding = 0
 
 
@@ -180,7 +185,7 @@ format-connected = <ramp-signal> <label-connected>
 format-disconnected = <label-disconnected>
 format-packetloss = <animation-packetloss> <label-connected>
 
-label-connected =   stanoira 
+label-connected =   stanoira  
 label-disconnected = 睊 not connected
 label-disconnected-foreground = ${colors.disable}
 
