--- a/.config/picom.~1~/picom.conf
+++ b/.config/picom.~1~/picom.conf
@@ -49,17 +49,17 @@ shadow = false;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
 # shadow-radius = 12
-shadow-radius = 22;
+# shadow-radius = 22;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
-shadow-opacity = .75
+# shadow-opacity = .75
 
 # The left offset for shadows, in pixels. (defaults to -15)
-shadow-offset-x = -15
+# shadow-offset-x = -15
 # shadow-offset-x = -05;
 
 # The top offset for shadows, in pixels. (defaults to -15)
-shadow-offset-y = -15
+# shadow-offset-y = -15
 # shadow-offset-y = -3;
 
 # Red color value of shadow (0.0 - 1.0, defaults to 0).
@@ -81,19 +81,19 @@ shadow-offset-y = -15
 #
 # shadow-exclude = []
 # Alacritty
-shadow-exclude = [
-  "name = 'Notification'",
-  "class_g = 'Rofi'",
-  "class_g = 'Conky'",
-  "class_g ?= 'Notify-osd'",
-  "class_g = 'Cairo-clock'",
-  "class_g = 'slop'",
-  "class_g = 'Polybar'",
-  "class_g = 'Conky'",
-  "class_g = 'dock'",
-  
-  "_GTK_FRAME_EXTENTS@:c"
-];
+# shadow-exclude = [
+#   "name = 'Notification'",
+#   "class_g = 'Rofi'",
+#   "class_g = 'Conky'",
+#   "class_g ?= 'Notify-osd'",
+#   "class_g = 'Cairo-clock'",
+#   "class_g = 'slop'",
+#   "class_g = 'Polybar'",
+#   "class_g = 'Conky'",
+#   "class_g = 'dock'",
+#   
+#   "_GTK_FRAME_EXTENTS@:c"
+# ];
 
 # Specify a X geometry that describes the region in which shadow should not
 # be painted in, such as a dock window region. Use
@@ -147,14 +147,14 @@ fade-delta = 10
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
 # inactive-opacity = 1
-inactive-opacity = 0.70;
+inactive-opacity = 1.0;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0
-frame-opacity = 0.90;
+frame-opacity = 1.0;
 
 # Let inactive opacity set by -i override the '_NET_WM_OPACITY' values of windows.
-# inactive-opacity-override = true
+# inactive-opacity-override = true;
 inactive-opacity-override = false;
 
 # Default opacity for active windows. (0.0 - 1.0, defaults to 1.0)
@@ -178,24 +178,11 @@ inactive-dim-fixed = true
 # example:
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 #
-# opacity-rule = []
 opacity-rule = [
-  "100:class_g     = 'Polybar'",             # lemonbar
-  "100:class_g    = 'slop'",            # maim
-  "100:class_g    = 'XTerm'",
-  "100:class_g    = 'URxvt'",
-  "100:class_g    = 'kitty'",
-  # "90:class_g    = 'Alacritty' && focused",
-  "80:class_g     = 'Polybar'",
-  "100:class_g    = 'code-oss'",
-  "100:class_g    = 'Meld'",
-  "70:class_g     = 'TelegramDesktop'",
-  "90:class_g     = 'Joplin'",
   "100:class_g    = 'firefox'&& focused",
-  "70:class_g     = 'firefox'&& !focused",
+  "90:class_g     = 'firefox'&& !focused",
+  "70:class_g     = 'Alacritty'&& !focused",
   "100:class_g    = 'Thunderbird'",
-  "100:class_g    = 'conky'",
-  "100:class_g    = 'dock'"
 ];
 
 
