--- a/.config/polybar.~1~/config.ini
+++ b/.config/polybar.~1~/config.ini
@@ -40,7 +40,7 @@ separator = "  "
 font-0 = "JetBrains Mono Nerd Font:style=Medium:size=10;2"
 font-1 = "FontAwesome:style=Regular:size=10;2"
 
-modules-left = i3 xwindow  
+modules-left = i3   
 modules-center = date
 modules-right = network networkspeedup networkspeeddown xkeyboard pulseaudio powermenu 
 
